fix crud ops
