# app/Http/Controllers/Api/TranslationsController.php
@@ -11,43 +11,34 @@ use Illuminate\Support\Str;
 use Validator;
 use Storage;
 use Config;
-use Carbon\Carbon;
 
-use App\Models\Form;
-use App\Models\Pcode;
-use App\Models\Setup;
-/** mail */
-use Illuminate\Support\Facades\Mail;
-use App\Mail\Welcome;
-use App\Mail\Code;
+use App\Models\Translation;
 
-$file_uuid = (string) Str::uuid();
 
-class FormController extends Controller
+class TranslationsController extends Controller
 {
-    
-    /**
+     /**
      * @OA\Post(
-     *     path="/pci/api/v1/forms/add",
-     *     tags={"Form"},
-     *     summary="Add form",
+     *     path="/pci/api/v1/translations/add",
+     *     tags={"Translations"},
+     *     summary="Add language translation",
      *     @OA\Response(response=200, description="Success")
      * )
      */
     public function add(Request $request)
     {
-        if( !Auth::user()->is_super )
+        if( !Auth::user()->is_super && !Auth::user()->is_fin )
         {
             return response([
                 'status' => 400,
                 'message' => 'Permission Denied. Only super admins allowed.',
-                'errors' => $validator->errors()->all(),
+                'errors' => [],
             ], 400);
         }
         try{
             $validator = Validator::make($request->all(), [
-                'name' => 'required|string',
-                'description' => 'required|string',
+                'en' => 'required|string',
+                'ar' => 'required|string',
             ]);
             if( $validator->fails() ){
                 return response([
@@ -57,12 +48,17 @@ class FormController extends Controller
                 ], 400);
             }
             $input = $request->all();
-            $input['name'] = trim(strtoupper(str_replace(' ','_', $input['name'])));
-            Form::create($input);
+            $wordExists = Translation::where('en', $input['en'])->exists();
+            $created = new \StdClass();
+            if($wordExists){
+                $created = Translation::where('en', $input['en'])->update($input);
+            }else{
+                $created = Translation::create($input);
+            }
             return response([
                 'status' => 200,
                 'message' => 'Success. Done',
-                'data' => $this->find_forms_data(),
+                'data' => $created,
             ], 200);
         } catch (\Illuminate\Database\QueryException $e) {
             return response([
@@ -79,28 +75,28 @@ class FormController extends Controller
         }
     }
 
-    /**
+     /**
      * @OA\Post(
-     *     path="/pci/api/v1/forms/edit/{id}",
-     *     tags={"Form"},
-     *     summary="Edit form",
+     *     path="/pci/api/v1/translations/edit/{id}",
+     *     tags={"Translations"},
+     *     summary="Edit language translation",
      *     @OA\Response(response=200, description="Success")
      * )
      */
     public function edit(Request $request, $id)
     {
-        if( !Auth::user()->is_super )
+        if( !Auth::user()->is_super && !Auth::user()->is_fin )
         {
             return response([
                 'status' => 400,
                 'message' => 'Permission Denied. Only super admins allowed.',
-                'errors' => $validator->errors()->all(),
+                'errors' => [],
             ], 400);
         }
         try{
             $validator = Validator::make($request->all(), [
-                'name' => 'required|string',
-                'description' => 'required|string',
+                'en' => 'required|string',
+                'ar' => 'required|string',
             ]);
             if( $validator->fails() ){
                 return response([
@@ -110,12 +106,11 @@ class FormController extends Controller
                 ], 400);
             }
             $input = $request->all();
-            $input['name'] = trim(strtoupper(str_replace(' ','', $input['name'])));
-            Form::find($id)->update($input);
+            $updated = Translation::find($id)->update($input);
             return response([
                 'status' => 200,
                 'message' => 'Success. Information updated',
-                'data' => $this->find_forms_data(),
+                'data' => $updated,
             ], 200);
         } catch (\Illuminate\Database\QueryException $e) {
             return response([
@@ -131,59 +126,47 @@ class FormController extends Controller
             ], 400);
         }
     }
-
-      /**
-     * @OA\Post(
-     *     path="/pci/api/v1/forms/drop/{id}",
-     *     tags={"Form"},
-     *     summary="Drop form",
-     *     @OA\Response(response=200, description="Success")
-     * )
-     */
-    public function drop($id)
-    {
-        Form::find($id)->delete();
-        return response([
-            'status' => 200,
-            'message' => "Done successfully",
-            'errors' => [],
-        ], 200);
-    }
     
-      /**
+     /**
      * @OA\Get(
-     *     path="/pci/api/v1/forms/findall",
-     *     tags={"Form"},
-     *     summary="List forms",
+     *     path="/pci/api/v1/translations/findall",
+     *     tags={"Translations"},
+     *     summary="List language translations",
      *     @OA\Response(response=200, description="Success")
      * )
      */
-    public function findall(Request $request)
+    public function findall()
     {
+        $data = Translation::select('id', 'en', 'ar')->get()->toArray();
+        // $mapped = array_map([$this, 'formtTranslation'], $data);
         return response([
             'status' => 200,
             'message' => "Done successfully",
-            'data' => $this->find_forms_data(),
+            'data' => $data,
         ], 200);
     }
 
-      /**
-     * @OA\Post(
-     *     path="/pci/api/v1/forms/find/{id}",
-     *     tags={"Form"},
-     *     summary="Find one form",
+    // protected function formtTranslation($data){
+    //     return $data;
+    // }
+
+    /**
+     * @OA\Get(
+     *     path="/pci/api/v1/translations/find/{edit}",
+     *     tags={"Translations"},
+     *     summary="Fetch language translation",
      *     @OA\Response(response=200, description="Success")
      * )
      */
     public function find($id)
     {
-        $data = Form::find($id);
+        $data = Translation::find($id);
         if( is_null($data) )
         {
             return response([
                 'status' => 200,
                 'message' => "Done successfully",
-                'data' => [],
+                'data' => (object)[],
             ], 200);
         }
         return response([
@@ -191,14 +174,5 @@ class FormController extends Controller
             'message' => "Done successfully",
             'data' => $data,
         ], 200);
-    }
-    protected function find_forms_data()
-    {
-        $d = Form::where('id', '!=', 0)->orderBy('id', 'desc')->get();
-        if(is_null($d))
-        {
-            return [];
-        }
-        return $d->toArray();
     }
 }
